Add kafka and refactoring
